fix: contents 업데이트 및 삭제 버그 수정