@@ -1,10 +1,12 @@
 package com.travelhub.travelhub_api.data.dto.contents;
 
+import com.travelhub.travelhub_api.data.dto.image.ImagePathsDto;
 import com.travelhub.travelhub_api.data.enums.ContentsPlaceType;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public record ContentsPlaceReaderDto(
         Long ctIdx,
@@ -35,9 +37,13 @@ public record ContentsPlaceReaderDto(
     }
 
     public PlaceDto ofPlace(String domain) {
-        List<String> images = Arrays.stream(this.igPath.split(","))
-                .map(path -> domain + path)
-                .toList();
+
+        List<ImagePathsDto> images = Arrays.stream(this.igPath.split(","))
+                .map(path -> ImagePathsDto.builder()
+                        .url(domain + path)
+                        .igPath(path)
+                        .build())
+                .collect(Collectors.toList());
 
         return PlaceDto.builder()
                 .cpIdx(this.cpIdx)
@@ -50,7 +56,7 @@ public record ContentsPlaceReaderDto(
                 .pcLat(this.pcLat)
                 .pcName(this.pcName)
                 .pcRating(this.pcRating)
-                .igPath(images)
+                .images(images)
                 .build();
     }
 }
